--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Politiques de confidentialité</h1>
+<h1>Politiques de confidentialités</h1>
 <p>
 Notre application utilise un WebView pour afficher un site web tiers. Nous ne collectons pas intentionnellement d'informations personnelles identifiables à travers l'application. Cependant, le site web peut collecter des données conformément à sa propre politique de confidentialité.
 Utilisation des informations
